fix: layout getting weird if the contents on a note item is not at max width then the sidebar collapses and also fixed width of each grid children on vim cheatsheet

--- a/src/App.scss
+++ b/src/App.scss
@@ -43,6 +43,8 @@
 .App {
 	min-width: 500px;
 	font-family: inter, Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+	text-decoration: none;
+	list-style: none;
 }
 
 input[type="search"],
